Estructura de Landing Completa, falta agregar información

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,11 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .App {
   text-align: center;
+  width: 90vw;
+  /* border: thin dotted #f00; */
 }
