--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,10 @@
 .FooterContainer{
     width: 100%;
-    height: 100px;
-    background: rgb(255, 239, 151);
-    margin: 50px 0 0 0;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    /* background: rgb(255, 239, 151); */
+    margin: 20px 0 10px 0;
 }
