--- a/client/src/components/Us/Us.css
+++ b/client/src/components/Us/Us.css
@@ -12,3 +12,13 @@ p{
     font-weight: 400;
     margin: 20px 0;
 }
+
+.PortadaModal{
+    width: 100%;
+    height: 250px;
+    margin: 20px 0;
+    background-image: url(../../assets/adidas-pureboost-dpr.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-color:black;
+}
