--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -79,7 +79,7 @@ ul li:hover{
     cursor: pointer;
 }
 
-form{
+.FormSearch{
     position: relative;
     top: -3px;
     left: 80%; 
@@ -91,11 +91,11 @@ form{
     box-sizing: border-box;
     border-radius: 25px;
     border: 4px solid white;
-    /*padding: 5px;*/
+    padding: 5px;
     border: thin solid #fff;
 }
 
-input{
+.SearchBar{
     /* position: absolute;
     top: 0;
     left: 0; */
@@ -126,20 +126,20 @@ input{
     transition: all 1s;
 }
 
-form:hover{
+.FormSearch:hover{
     width: 300px;
     cursor: pointer;
 }
 
-form:hover input{
+.FormSearch:hover .SearchBar{
     display: block;
 }
 
-form input:focus-visible{
+.FormSearch .SearchBar:focus-visible{
     border-bottom: thin 1px #f00;
 }
 
-form:hover .fa{
+.FormSearch:hover .fa{
     background: #07051a;
     color: white;
 }
