--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .HomeContainer{
     width: 100%;
-    height: 600px;
+    max-height: 600px;
     margin: 100px 0;
     display: flex;
     flex-direction: row;
@@ -10,8 +10,9 @@
 }
 
 .Images{
-    width: 1520px;
-    /* border: thin dotted #f00; */
+    /* width: 1520px; */
+    width: 80%;
+    border: thin dotted #00f;
 }
 
 .Title{
@@ -91,4 +92,25 @@
 
 .divTitle5:hover  .Title5{
     display: block;
+}
+
+
+.Img1{
+    height: 63vh;
+}
+
+.Img2{
+    height: 30vh;
+}
+
+.Img3{
+    height: 32.2vh;
+}
+
+.Img4{
+    height: 25vh;
+}
+
+.Img5{
+    height: 37.2vh;
 }
