--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -9,7 +9,7 @@
 }
 
 .LogoContainer{
-    width: 30vw;
+    width: 20vw;
     height: 50px;
     float: left;
     /* border: thin dotted #f00; */
@@ -24,7 +24,7 @@
 }
 
 .MenuContainer{
-    width: 40vw;
+    width: 60vw;
     float: left;
     display: flex;
     flex-direction: row;
@@ -55,7 +55,7 @@ ul li:hover{
 }
 
 .ToolsContainer{
-    width: 30vw;
+    width: 20vw;
     float: left;
     display: flex;
     flex-direction: row;
@@ -91,24 +91,25 @@ ul li:hover{
     box-sizing: border-box;
     border-radius: 25px;
     border: 4px solid white;
-    padding: 5px;
+    padding: 4px;
     border: thin solid #fff;
 }
 
 .SearchBar{
     /* position: absolute;
     top: 0;
+    border: solid 1px #f00;
     left: 0; */
-    width: 250px;
+    width: 200px;
     height: 30px;
     line-height: 30px;
     outline: 0;
-    border:0;
+    border: none;
     background: transparent;
     display: none;
     font-size: 1em;
     border-radius: 20px;
-    padding: 0 10px;
+    padding: 5px;
 }
 
 .fa{
@@ -127,7 +128,7 @@ ul li:hover{
 }
 
 .FormSearch:hover{
-    width: 300px;
+    width: 250px;
     cursor: pointer;
 }
 
@@ -135,9 +136,6 @@ ul li:hover{
     display: block;
 }
 
-.FormSearch .SearchBar:focus-visible{
-    border-bottom: thin 1px #f00;
-}
 
 .FormSearch:hover .fa{
     background: #07051a;
