--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -35,7 +35,7 @@
 
 ul li{
     list-style: none;
-    transition: 0.5s all;
+    transition: 0.1s all;
     font-size: 1.1em;
     /* border: thin dotted #f00; */
 }
@@ -43,6 +43,7 @@ ul li{
 ul li:hover{
     color: #f00;
     cursor: pointer;
+    /* transform: translateY(-3px); */
 }
 
 .Link{
@@ -52,6 +53,7 @@ ul li:hover{
 .Menu{
     width: 110px;
     float: left;
+    padding: 5px
 }
 
 .ToolsContainer{
@@ -140,4 +142,86 @@ ul li:hover{
 .FormSearch:hover .fa{
     background: #07051a;
     color: white;
+}
+
+.ToolTipsUser{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.LinkUserContainer{
+    width: 100%;
+    height: 30px;
+    padding:0 5px ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    /* border: thin dotted #f00; */
+}
+
+.LinkUserContainer a{
+    font-size: 18px;
+    padding: 5px;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.5s all;
+}
+
+.LinkUserContainer a:hover{
+    text-shadow: 0 5px 8px #000000;
+}
+
+.LinkMarcaContainer1 a{
+    width: 60px;
+    font-size: 16px;
+    padding: 5px;
+    margin-right: 5px;
+    text-decoration: none;
+    color: #00000070;
+    float: left;
+    transition: 0.5s all;
+    text-align: left;
+    /* border: thin dotted #f00; */
+}
+
+.LinkMarcaContainer2 a{
+    width: 80px;
+    font-size: 16px;
+    padding: 5px;
+    text-decoration: none;
+    color: #00000070;
+    float: left;
+    transition: 0.5s all;
+    text-align: center;
+    /* border: thin dotted #f00; */
+}
+
+.LinkMarcaContainer3 a{
+    width: 75px;
+    font-size: 16px;
+    padding: 5px;
+    text-decoration: none;
+    color: #00000070;
+    float: left;
+    transition: 0.5s all;
+    text-align: right;
+    /* border: thin dotted #f00; */
+}
+
+.LinkMarcaContainer1 a:hover, .LinkMarcaContainer2 a:hover, .LinkMarcaContainer3 a:hover, .LinkCategoriaContainer1 a:hover{
+    color: #000000;
+}
+
+.LinkCategoriaContainer1 a{
+    width: 75px;
+    font-size: 16px;
+    padding: 5px;
+    text-decoration: none;
+    color: #00000070;
+    float: left;
+    transition: 0.5s all;
+    text-align: center;
+    /* border: thin dotted #f00; */
 }
