--- a/client/src/components/Brand/Brand.css
+++ b/client/src/components/Brand/Brand.css
@@ -3,3 +3,11 @@
     height: 700px;
     background: #000;
 }
+
+@media (min-width: 1200px){
+    .ContainerBrand{
+        width: 100%;
+        height: 500px;
+        background: #000;
+    }
+}
