--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -5,6 +5,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    /* background: rgb(255, 239, 151); */
     margin: 20px 0 10px 0;
+}
+
+.FootText{
+    font-size: 14px;
+}
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+    
+    .FootText{
+        font-size: 10px;
+    }
 }
