--- a/client/src/components/Brand/Brand.css
+++ b/client/src/components/Brand/Brand.css
@@ -4,7 +4,7 @@
     background: #000;
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) and (max-width: 1399px){
     .ContainerBrand{
         width: 100%;
         height: 500px;
