--- a/client/src/components/Newsletter/Newsletter.css
+++ b/client/src/components/Newsletter/Newsletter.css
@@ -1,6 +1,6 @@
 .NewsletterContainer{
     width: 100%;
-    height: 280px;
+    height: 320px;
     margin: 100px 0;
     padding: 30px 0;
     display: flex;
@@ -12,6 +12,7 @@
 }
 
 .NewsletterTitle{
+    font-size: 36px;
     font-weight: bold;
 }
 
