--- a/client/src/components/Register/formRegisterStyles.css
+++ b/client/src/components/Register/formRegisterStyles.css
@@ -32,6 +32,33 @@
     border-radius: 8px;
     outline: none;
 }
+.data-Field-reg{
+ font-size: 16px;
+}
+.no-validate{
+    font-size: 14px;
+    text-align: start;
+    color: red;
+    font-weight: 600;
+}
+.validate{
+    font-size: 16px;
+    text-align: start;
+    margin-left: 180px;
+    color: green;
+    font-weight: 600;
+}
+.data-Field-reg p{
+    font-size: 16px;
+}
+.data-Field-reg a{
+    font-size: 16px;
+    text-decoration: none;
+    color: #fc4444;
+}
+.data-log-box{
+    margin-left: 115px;
+}
 .form-box-reg{
     margin-top: 35px;
     margin-left: 55px;
