--- a/client/src/components/Login/loginStyles.css
+++ b/client/src/components/Login/loginStyles.css
@@ -1,6 +1,10 @@
 .log-Cont{
     width: 100vw;
     height: 100vh;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/nikeBotaRoja.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 .log-Box{
     border: solid #ccc 1px;
@@ -13,6 +17,7 @@
     top: 10vh;
     padding: 15px;
     margin: 0 auto;
+    background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 .border-dec{
