--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -70,4 +70,21 @@
     .SliderTitle{
         font-size: 14px;
     }
+
+}
+
+@media (min-width: 992px) and (max-width: 1199px){
+    
+    .SliderTitle{
+        font-size: 14px;
+    }
+
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+    
+    .SliderTitle{
+        font-size: 16px;
+    }
+
 }
