--- a/client/src/components/Brand/Brand.css
+++ b/client/src/components/Brand/Brand.css
@@ -11,3 +11,19 @@
         background: #000;
     }
 }
+
+@media (min-width: 992px) and (max-width: 1199px){
+    .ContainerBrand{
+        width: 100%;
+        height: 450px;
+        background: #000;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+    .ContainerBrand{
+        width: 100%;
+        height: 400px;
+        background: #000;
+    }
+}
