--- a/client/src/components/Us/Us.css
+++ b/client/src/components/Us/Us.css
@@ -24,7 +24,7 @@ p{
     background-color:black;
 }
 
-@media (min-width: 1200px) and (max-width: 1399px){
+@media (min-width: 992px) and (max-width: 1399px){
     
     .UsContainer h1{
         font-size: 24px;
@@ -39,3 +39,31 @@ p{
 
     }
 }
+
+@media (min-width: 768px) and (max-width: 991px){
+
+    .UsContainer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 20px 0;
+        padding: 20px;
+    }
+    
+    .UsContainer h1{
+        font-size: 24px;
+    }
+    
+    .UsContainer p{
+        width: 80%;
+        font-size: 14px;
+    }
+    
+    .TextModal p{
+        font-size: 16px;
+
+    }
+}
+
