--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -35,7 +35,7 @@
     /* border: thin dotted #f00; */
 }
 
-.Price{
+.PriceProduct{
     color: #000;
     font-size: 24px;
     /* border: thin dotted #f00; */
