--- a/client/src/components/ShoppingCart/CartItem.css
+++ b/client/src/components/ShoppingCart/CartItem.css
@@ -1,17 +1,17 @@
 .CartItemContainer{
-    width: 900px;
-    height: 200px;
+    width: 965px;
+    height: 150px;
     position: relative;
     margin: 0 auto;
-    margin-top: 50px;
-    /* border: thin dotted #f00; */
+    margin-top: 20px;
     overflow: hidden;
+    /* border: thin dotted #f00; */
     /* box-shadow: 0 5px 10px rgba(0,0,0,0.15); */
 }
 
 .CartItemImage{
     width: 180px;
-    height: 180px; 
+    height: 120px; 
     float: left;
     overflow: hidden;
     /* border: thin dotted #f00; */
@@ -19,48 +19,103 @@
 
 .CartItemImage img{
     height: 180px;
+    position: relative;
+    top: -25px;
 }
 
 .CartItemInfo{
-    width: 450px;
-    height: 170px;
+    width: 500px;
+    max-width: 500px;
+    height: 140px;
     float: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 15px;
+    margin-right: 15px;
     /* border: thin dotted #00f; */
 }
 
 .NameProduct{ 
-    font-size: 16px;
+    width: 100%;
+    text-align: left;
+    font-size: 13px;
     text-align: left;
     color: #00000050;
     /* border: thin dotted #f00; */
-    
 }
+
+.Row{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.PriceShoppinCart{
+    width: 49%;
+    height: 30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: left;
+    font-size: 16px;
+    float: left;
+    /* border: thin dotted #f00; */
+}
+
+.SelectTalle{
+    width: 50%;
+    height: 32px;
+    /* border: thin dotted #f00; */
+}
+
+.SelectShoppingCart{
+    width: 60%;
+    height: 30px;
+    outline: 0; 
+    border-radius: 12px;
+    padding: 0px 10px 0 10px;
+    font-size: 1em;
+    transition: all 0.25s ease; 
+    color: rgb(99, 99, 99);
+    border: solid 1px #ccc;
+}
+
+.SelectShoppingCart:hover{
+    cursor: pointer;
+    border: none;
+    box-shadow: 0 5px 10px #00000030;
+}
+
 .Quantity{
-    width: 70%;
-    height: 50px;
+    width: 100%;
+    height: 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    /* border: thin dotted #000; */
+    border: thin dotted #000;
 }
 
 .QuantityTitle{
-    width: 35%;
-    font-size: 16px;
-    font-weight: bold;
+    width: 20%;
+    font-size: 14px;
+    text-align: left;
+    /* font-weight: bold; */
     /* border: thin dotted #0f0; */
 }
 
 .QuantityNumber{
     width: 30px;
     color: red;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     /* border: thin dotted #0f0; */
 }
 
 .QuantityButtons{
-    width: 50%;
+    width: 25%;
     /* border: thin dotted #0f0; */
 }
 
@@ -70,51 +125,41 @@
     float: left;
 }
 
-.Total{
-    width: 200px;
-    margin: 0 auto;
-    margin-top: 30px;
-    text-align: center;
-}
-
-
-.Price{
-    width: 300px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    text-align: left;
-    font-size: 20px;
-    float: left;
-    /* border: thin dotted #f00; */
-}
-
 .CartPrice{
     width: 250px;
-    height: 170px;
+    max-width: 250px;
+    height: 140px;
     float: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 1));
+    /* background:  #cccccc50; */
     /* border: thin dotted #000; */
 }
 
 .BtnCart{
     width: 100%;
-    /* border: thin dotted #f00; */
+    /* border: thin dotted #000; */
 }
 
-.CartItemDelete{
-    width: 150px;
-    height: 30px;
+.CartItemButtonOption{
+    width: 160px;
+    height: 25px;
     border: none;
+    margin: 0 5px;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 14px;
     color: #fff;
     background-color: rgb(49, 102, 202);
 }
 
-.CartItemDelete:hover{
+.CartItemButtonOption:hover{
     background-color: rgb(27, 73, 158);
 }
 
-.CartItemButton:hover, .CartItemDelete:hover{
+.CartItemButton:hover, .CartItemButtonOption:hover{
     cursor: pointer;
     box-shadow: 0 5px 10px #00000030;
 }
@@ -130,36 +175,26 @@
     transition: all 0.25s ease;
 }
 
-/* .Tickets{
-    width: 300px;
-    height: 120px;
-    float: left;
-} */
-
-/* .Quantity{
-    width: 30px;
-    height: 30px;
-    margin: 0 auto;
-    margin-top: 20px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    font-size: 24px;
+.CartItemButtonDisabled{
+    width: 40px;
+    height: 25px;
+    color: #00000050;
     font-weight: bold;
-} */
-
-
-
-
-
-.CartItemDeleteContainer{
-    width: 350px;
-    margin: 0 auto;
-    margin-top: 90px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    margin-right: 5px;
+    pointer-events: none;
 }
+
+.Total{
+    width: 100%;
+    padding-top: 15px;
+    margin: 0 auto;
+    text-align: center;
+    /* border: thin dotted #000; */
+}
+
 
 /************ STEP 2 ***********/
 
